@@ -1,3 +1,12 @@
+2007-11-14  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Oliver.
+        
+        More PCRE style cleanup.
+
+        * pcre/pcre_compile.cpp:
+        (compile_regex):
+
 2007-11-14  Adam Roben  <aroben@apple.com>
 
         Clean up the bison conflict checking script
